:construction: ext json

--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
     ],
     "require": {
         "php": "^7.3",
+        "ext-json": "*",
         "guzzlehttp/guzzle": "^7.3"
     },
     "require-dev": {
