--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
         }
     ],
     "require": {
-        "php": "^7.3",
+        "php": "^7.2",
         "ext-json": "*",
         "guzzlehttp/guzzle": "^7.3"
     },
@@ -23,7 +23,7 @@
         "friendsofphp/php-cs-fixer": "^2.17",
         "fzaninotto/faker": "^1.9",
         "phpunit/phpunit": "^9.5",
-        "spatie/ray": "^1.10",
+        "roave/security-advisories": "dev-latest",
         "vimeo/psalm": "^4.3"
     },
     "autoload": {
@@ -43,7 +43,8 @@
         "format": "vendor/bin/php-cs-fixer fix --allow-risky=yes"
     },
     "config": {
-        "sort-packages": true
+        "sort-packages": true,
+        "optimize-autoloader": true
     },
     "minimum-stability": "dev",
     "prefer-stable": true
